Update nullable rect call